--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
-  "optionalDependencies": {
-    "react-router-dom": "^6.18.0"
+  "dependencies": {
+    "framer-motion": "^10.12.16",
+    "react-intersection-observer": "^9.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.30.2"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
